tests/ui/resolve/resolve-self-in-impl-2.stderr
error[E0411]: expected trait, found self type `Self`
  --> $DIR/resolve-self-in-impl-2.rs:4:6
   |
LL | impl Self for S {}
   |      ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0405]: cannot find trait `N` in `Self`
  --> $DIR/resolve-self-in-impl-2.rs:5:12
   |
LL | impl Self::N for S {}
   |            ^ not found in `Self`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0405, E0411.
For more information about an error, try `rustc --explain E0405`.
